--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 /* GLOBAL */
 body {
 margin: 0;
-font-family: 'Georama', sans-serif;
+font-family: 'DM Sans', sans-serif;
 font-size: 1.5em;
 }
 a {
